--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
+    "postcss": "^8.5.6",
     "prisma": "^6.12.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
