--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.12.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.526.0",
     "next": "^15.4.4",
     "next-auth": "beta",
     "react": "^19.1.0",
